--- a/src/assets/styles/app/_news.scss
+++ b/src/assets/styles/app/_news.scss
@@ -67,6 +67,10 @@
         top: 2rem;
     }
 
+    .layout-menu {
+        padding-bottom: 2rem;
+    }
+
     .layout-content {
         padding-top: 7rem;
     }
