--- a/src/components/ripple/Ripple.css
+++ b/src/components/ripple/Ripple.css
@@ -9,8 +9,9 @@
     background: rgba(255, 255, 255, 0.5);
     border-radius: 100%;
     transform: scale(0);
+    pointer-events: none;
 }
-  
+
 .p-ink-active {
     animation: ripple 0.4s linear;
 }
@@ -18,7 +19,7 @@
 .p-ripple-disabled .p-ink {
     display: none !important;
 }
-  
+
 @keyframes ripple {  
     100% {
         opacity: 0;
