--- a/src/assets/styles/app/_news.scss
+++ b/src/assets/styles/app/_news.scss
@@ -47,6 +47,7 @@
         width: 1.5rem;
         height: 1.5rem;
         transition: background-color .3s;
+        margin-left: .5rem;
 
         &:hover {
             background-color: rgba(255,255,255,.2);
