--- a/public/themes/lara-light-teal/theme.css
+++ b/public/themes/lara-light-teal/theme.css
@@ -1088,6 +1088,10 @@
   transition-duration: 0.2s;
 }
 
+.p-float-label > .p-invalid + label {
+  color: #e24c4c;
+}
+
 .p-input-icon-left > i:first-of-type {
   left: 0.75rem;
   color: #6c757d;
