--- a/public/themes/luna-amber/theme.css
+++ b/public/themes/luna-amber/theme.css
@@ -1092,6 +1092,10 @@
   transition-duration: 0.2s;
 }
 
+.p-float-label > .p-invalid + label {
+  color: #e57373;
+}
+
 .p-input-icon-left > i:first-of-type {
   left: 0.429rem;
   color: #888888;
