--- a/public/themes/nova-alt/theme.css
+++ b/public/themes/nova-alt/theme.css
@@ -1092,6 +1092,10 @@
   transition-duration: 0.2s;
 }
 
+.p-float-label > .p-invalid + label {
+  color: #a80000;
+}
+
 .p-input-icon-left > i:first-of-type {
   left: 0.429rem;
   color: #848484;
