--- a/public/themes/rhea/theme.css
+++ b/public/themes/rhea/theme.css
@@ -1088,6 +1088,10 @@
   transition-duration: 0.2s;
 }
 
+.p-float-label > .p-invalid + label {
+  color: #e7a3a3;
+}
+
 .p-input-icon-left > i:first-of-type {
   left: 0.429rem;
   color: #a6a6a6;
