--- a/public/themes/saga-green/theme.css
+++ b/public/themes/saga-green/theme.css
@@ -1088,6 +1088,10 @@
   transition-duration: 0.2s;
 }
 
+.p-float-label > .p-invalid + label {
+  color: #f44336;
+}
+
 .p-input-icon-left > i:first-of-type {
   left: 0.5rem;
   color: #6c757d;
