update DevelopmentSection and doc style

--- a/src/assets/styles/app/_content.scss
+++ b/src/assets/styles/app/_content.scss
@@ -87,6 +87,7 @@
                 border-radius: 3px;
                 font-weight: 600;
                 margin: 0 2px;
+                white-space: nowrap;
             }
 
             h1, h2, h3, h4, h5, h6 {
