--- a/public/themes/luna-pink/theme.css
+++ b/public/themes/luna-pink/theme.css
@@ -277,10 +277,6 @@
   background: #464646;
   color: #dedede;
 }
-.p-autocomplete .p-autocomplete-multiple-container .p-autocomplete-token:hover {
-  background: #585858;
-  color: #dedede;
-}
 .p-autocomplete.p-invalid.p-component > .p-inputtext {
   border-color: #e57373;
 }
@@ -360,7 +356,7 @@
 .p-datepicker .p-datepicker-header .p-datepicker-next {
   width: 2rem;
   height: 2rem;
-  color: rgba(136, 136, 136, 0.5333333333);
+  color: #8888;
   border: 0 none;
   background: transparent;
   border-radius: 50%;
@@ -448,7 +444,7 @@
 .p-datepicker .p-timepicker button {
   width: 2rem;
   height: 2rem;
-  color: rgba(136, 136, 136, 0.5333333333);
+  color: #8888;
   border: 0 none;
   background: transparent;
   border-radius: 50%;
@@ -707,10 +703,6 @@
   background: #4b4b4b;
   color: #dedede;
   border-radius: 16px;
-}
-.p-chips .p-chips-multiple-container .p-chips-token:hover {
-  background: #585858;
-  color: #dedede;
 }
 .p-chips .p-chips-multiple-container .p-chips-token.p-focus {
   background: #464646;
@@ -1335,7 +1327,7 @@
   margin-left: 0.5rem;
   width: 2rem;
   height: 2rem;
-  color: rgba(136, 136, 136, 0.5333333333);
+  color: #8888;
   border: 0 none;
   background: transparent;
   border-radius: 50%;
@@ -2505,7 +2497,7 @@
 .p-carousel .p-carousel-content .p-carousel-next {
   width: 2rem;
   height: 2rem;
-  color: rgba(136, 136, 136, 0.5333333333);
+  color: #8888;
   border: 0 none;
   background: transparent;
   border-radius: 50%;
@@ -2644,7 +2636,7 @@
 .p-datatable .p-datatable-tbody > tr > td .p-row-editor-cancel {
   width: 2rem;
   height: 2rem;
-  color: rgba(136, 136, 136, 0.5333333333);
+  color: #8888;
   border: 0 none;
   background: transparent;
   border-radius: 50%;
@@ -2826,7 +2818,7 @@
 .p-column-filter-menu-button {
   width: 2rem;
   height: 2rem;
-  color: rgba(136, 136, 136, 0.5333333333);
+  color: #8888;
   border: 0 none;
   background: transparent;
   border-radius: 50%;
@@ -2854,7 +2846,7 @@
 .p-column-filter-clear-button {
   width: 2rem;
   height: 2rem;
-  color: rgba(136, 136, 136, 0.5333333333);
+  color: #8888;
   border: 0 none;
   background: transparent;
   border-radius: 50%;
@@ -3088,7 +3080,7 @@
   font-size: 1rem;
   width: 2rem;
   height: 2rem;
-  color: rgba(136, 136, 136, 0.5333333333);
+  color: #8888;
   border: 0 none;
   background: transparent;
   border-radius: 50%;
@@ -3495,7 +3487,7 @@
   margin-right: 0.5rem;
   width: 2rem;
   height: 2rem;
-  color: rgba(136, 136, 136, 0.5333333333);
+  color: #8888;
   border: 0 none;
   background: transparent;
   border-radius: 50%;
@@ -3647,7 +3639,7 @@
 .p-treetable .p-treetable-tbody > tr > td .p-treetable-toggler {
   width: 2rem;
   height: 2rem;
-  color: rgba(136, 136, 136, 0.5333333333);
+  color: #8888;
   border: 0 none;
   background: transparent;
   border-radius: 50%;
@@ -3910,7 +3902,7 @@
 .p-panel .p-panel-header .p-panel-header-icon {
   width: 2rem;
   height: 2rem;
-  color: rgba(136, 136, 136, 0.5333333333);
+  color: #8888;
   border: 0 none;
   background: transparent;
   border-radius: 50%;
@@ -4099,7 +4091,7 @@
 .p-dialog .p-dialog-header .p-dialog-header-icon {
   width: 2rem;
   height: 2rem;
-  color: rgba(136, 136, 136, 0.5333333333);
+  color: #8888;
   border: 0 none;
   background: transparent;
   border-radius: 50%;
@@ -4203,7 +4195,7 @@
 .p-sidebar .p-sidebar-header .p-sidebar-icon {
   width: 2rem;
   height: 2rem;
-  color: rgba(136, 136, 136, 0.5333333333);
+  color: #8888;
   border: 0 none;
   background: transparent;
   border-radius: 50%;
