--- a/public/themes/lara-dark-teal/theme.css
+++ b/public/themes/lara-dark-teal/theme.css
@@ -1180,6 +1180,7 @@
   color: rgba(255, 255, 255, 0.87);
   border: 1px solid #0b213f;
   border-radius: 6px;
+  transition: background-color 0.2s, color 0.2s, border-color 0.2s, box-shadow 0.2s;
 }
 .p-listbox .p-listbox-header {
   padding: 0.75rem 1.25rem;
