--- a/public/themes/mdc-light-indigo/theme.css
+++ b/public/themes/mdc-light-indigo/theme.css
@@ -1204,6 +1204,7 @@
   color: rgba(0, 0, 0, 0.87);
   border: 1px solid #e5e5e5;
   border-radius: 4px;
+  transition: background-color 0.2s, border-color 0.2s, color 0.2s, box-shadow 0.2s, background-size 0.2s cubic-bezier(0.64, 0.09, 0.08, 1);
 }
 .p-listbox .p-listbox-header {
   padding: 0.75rem;
