Fixed wrapping text beneath tree table node

--- a/public/themes/bootstrap4-light-blue/theme.css
+++ b/public/themes/bootstrap4-light-blue/theme.css
@@ -3647,6 +3647,7 @@
   border-radius: 50%;
   transition: box-shadow 0.15s;
   margin-right: 0.5rem;
+  flex-shrink: 0;
 }
 .p-treetable .p-treetable-tbody > tr > td .p-treetable-toggler:enabled:hover {
   color: #495057;
