--- a/public/themes/bootstrap4-dark-purple/theme.css
+++ b/public/themes/bootstrap4-dark-purple/theme.css
@@ -3647,6 +3647,7 @@
   border-radius: 50%;
   transition: color 0.15s, box-shadow 0.15s;
   margin-right: 0.5rem;
+  flex-shrink: 0;
 }
 .p-treetable .p-treetable-tbody > tr > td .p-treetable-toggler:enabled:hover {
   color: rgba(255, 255, 255, 0.87);
