--- a/public/themes/arya-green/theme.css
+++ b/public/themes/arya-green/theme.css
@@ -3968,6 +3968,12 @@
   transition: background-color 0.2s, color 0.2s, box-shadow 0.2s;
   background: rgba(255, 255, 255, 0.03);
 }
+.p-splitter .p-splitter-gutter:focus {
+  outline: 0 none;
+  outline-offset: 0;
+  box-shadow: inset 0 0 0 1px #a7d8a9;
+  border-radius: 3px;
+}
 .p-splitter .p-splitter-gutter .p-splitter-gutter-handle {
   background: #383838;
 }
