--- a/public/themes/rhea/theme.css
+++ b/public/themes/rhea/theme.css
@@ -3943,6 +3943,12 @@
   transition: background-color 0.2s, color 0.2s, box-shadow 0.2s;
   background: #eaeaea;
 }
+.p-splitter .p-splitter-gutter:focus {
+  outline: 0 none;
+  outline-offset: 0;
+  box-shadow: inset 0 0 0 0.2rem #e4e9ec;
+  border-radius: 2px;
+}
 .p-splitter .p-splitter-gutter .p-splitter-gutter-handle {
   background: #dadada;
 }
