--- a/public/themes/mdc-light-deeppurple/theme.css
+++ b/public/themes/mdc-light-deeppurple/theme.css
@@ -3979,6 +3979,12 @@
 .p-scrollpanel .p-scrollpanel-bar {
   background: rgba(0, 0, 0, 0.12);
   border: 0 none;
+  transition: background-color 0.2s, border-color 0.2s, color 0.2s, box-shadow 0.2s, background-size 0.2s cubic-bezier(0.64, 0.09, 0.08, 1);
+}
+.p-scrollpanel .p-scrollpanel-bar:focus {
+  outline: 0 none;
+  outline-offset: 0;
+  box-shadow: none;
 }
 
 .p-splitter {
@@ -6923,6 +6929,10 @@
 }
 .p-input-filled .p-radiobutton .p-radiobutton-box:not(.p-disabled):hover {
   background-color: #ffffff;
+}
+
+.p-scrollpanel .p-scrollpanel-bar:focus {
+  box-shadow: 0 0 1px 3px rgba(76, 175, 80, 0.2);
 }
 
 .p-selectbutton .p-button:focus {
