--- a/public/themes/nova/theme.css
+++ b/public/themes/nova/theme.css
@@ -3962,6 +3962,12 @@
 }
 .p-splitter .p-splitter-gutter .p-splitter-gutter-handle {
   background: #d8dae2;
+  transition: background-color 0.2s, color 0.2s, border-color 0.2s, box-shadow 0.2s;
+}
+.p-splitter .p-splitter-gutter .p-splitter-gutter-handle:focus {
+  outline: 0 none;
+  outline-offset: 0;
+  box-shadow: 0 0 0 0.2rem #8dcdff;
 }
 .p-splitter .p-splitter-gutter-resizing {
   background: #d8dae2;
